# GesFer.Product.Back

./: .cursorrules  .dockerignore  .gitignore  AGENTS.md  AGENTS.norms.md  Objetivos.md  README.md  build_logs.txt  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  evolution_input.json  evolution_payload.json  fix_deletedat.py  sddia_evolution.json  sddia_evolution_input.json  sddia_evolution_todos.json  sddia_update.json  test_branch.sh  test_plan.md  test_task.sh  update_evolution.json
.cursor/rules/: action-suggestions.mdc  commands-via-skills-tools.mdc  eficiencia-operativa-tokens.mdc  features-documentation-pattern.mdc  process-suggestions.mdc  sddia-evolution-sync.mdc  sddia-ssot.mdc  skill-suggestions.mdc  subir-push.mdc
.github/: README.md
.github/workflows/: pr-validation.yml
SddIA/: CONSTITUTION.md  constitution.json
SddIA/actions/: README.md  (+1 more)
docs/: DocumentacionUsuarios.md  openapi-gesfer-product-v1.json
scripts/: README-E2E.md  Run-E2ELocal.ps1  audit_frontend_daily.py  cerrar-procesos-servicios.ps1  ejecutar-tests.ps1  install-front-dependencies.ps1  remove-json-keys.ps1  run-service-with-log.ps1  validate-nomenclatura.ps1  validate-services-and-health.ps1
scripts/tools-rs/: Cargo.toml  README.md  install.ps1
scripts/tools-rs/sddia-skills/: Cargo.toml
scripts/tools-rs/sddia-skills/src/: main.rs
scripts/tools-rs/src/: lib.rs
src/: .dockerignore  .gitignore  DOCKER-SETUP.md  Dockerfile  Dockerfile.test  GesFer.Product.sln  README.md  TROUBLESHOOTING.md  docker-start.ps1  docker-stop.ps1  reset-db.ps1  reset-db.sh
(+1400 files in other folders)
